--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -19,58 +16,31 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
-# PyInstaller
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-.hypothesis/
-.pytest_cache/
-
-# Virtual environments
-env/
+# Virtual Environment
 venv/
 .venv/
 ENV/
-env.bak/
-venv.bak/
 
-# IDE specific files
+# Model files (too large for GitHub)
+models/*/model.bin
+models/*/vocabulary.json
+models/*/tokenizer.json
+
+# IDE settings
 .idea/
 .vscode/
 *.swp
 *.swo
 
-# Model files (large binary files)
-# Keep smaller model files in repository
-*.bin
-*.pt
-*.onnx
-# models/*
-# !models/README.txt
-
-# Local configuration
-.env
-.env.*
-
-# Large model files (> 100MB) - GitHub limitation
-# Keep JSON configuration and vocabulary files which are small
-models/**/*.bin 
+# OS specific
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db 
